# moonshine_usd

./: .gitignore  CMakeLists.txt  README.md  SConscript  flowpipeline.yaml  package.py
.github/workflows/: trigger_RaTS.yml
cmake/: MoonshineUsdCompileDefinitions.cmake  MoonshineUsdCompileOptions.cmake
dso/: CMakeLists.txt
dso/geometry/: CMakeLists.txt
dso/geometry/Usd/: CMakeLists.txt  SConscript  UsdGeometry.cc  attributes.cc
dso/geometry/UsdInstance/: CMakeLists.txt  SConscript  UsdInstanceGeometry.cc  attributes.cc
lib/: CMakeLists.txt
lib/geometry/: CMakeLists.txt
lib/geometry/usd/: CMakeLists.txt  Common.cc  Common.h  Curves.cc  Curves.h  Mesh.cc  Mesh.h  Points.cc  Points.h  SConscript  Usd.h
